--- a/meditation-app/style.css
+++ b/meditation-app/style.css
@@ -7,6 +7,7 @@ html {
 
 body {
   font-family: sans-serif;
+  height: 100vh;
 }
 
 .wrapper {
@@ -18,9 +19,38 @@ body {
   padding: 30px;
   width: 120px;
 }
-
-/* Icon
+/* Movie
 ---------------------------------------- */
+.bg_movie video{
+  position: fixed;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  height: auto;
+  z-index: -10;
+}
+
+/* Player
+---------------------------------------- */
+.player_container {
+  justify-content: center;
+  align-items: center;
+}
+.player_container img {
+  position: absolute;
+}
+
+
+
+
+
+
+/* Sound Picker
+---------------------------------------- */
+.sound_picker {
+  
+}
+
 .beach{
   background-color: #A14f49;
 }
@@ -28,6 +58,8 @@ body {
   background-color: #4972A1;
 }
 
-.player_container {
-  background-color: #A14f49;
-}
+
+
+
+
+
