--- a/testweb/style.css
+++ b/testweb/style.css
@@ -43,6 +43,7 @@ header h1 {
     justify-content: space-between;
     align-items: center;
     margin: 0 3rem;
+    min-width: 0;
 }
 
 nav {
@@ -83,7 +84,7 @@ hr {
 /* News
 ---------------------------------------------- */
 .news {
-    margin: 120px;
+    margin: 3rem;
 }
 
 .news_content {
