--- a/ShiftCreat/style.css
+++ b/ShiftCreat/style.css
@@ -13,12 +13,20 @@ body {
 
 /* Calendar
 ----------------------------------------- */
-
 .calendar_container {
-    width: 50%;
+    width: 500px;
+    margin: 0 auto;
+    border-radius: 3px;
+    background: #FFF9E6;
+    color: #1a1a1a;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    position: relative;
 }
 
-h2 {
+.calendar_container h2 {
     height: 50px;
     line-height: 50px;
     text-align: center;
@@ -41,27 +49,16 @@ h2 {
     padding: 20px;
     display: flex;
     justify-content: center;
-}
-
-.calendar_container {
-    width: 500px;
+    border-spacing: 5px;
     margin: 0 auto;
-    border-radius: 3px;
-    background: #FFF9E6;
-    color: #1a1a1a;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    position: relative;
 }
 
-td.today { /* 当日の色変更 */
+.calendar td.today { /* 当日の色変更 */
     background-color: #fdac43c9;
     border-radius: 50%;
 }
 
-td {
+.calendar td {
     padding: 10px;
     color: #2c2c2c;
     font-size: 1.6rem;
@@ -69,33 +66,26 @@ td {
     cursor: pointer;
 }
 
-tr *:first-child {
+.calendar tr *:first-child {
     color: rgb(255, 101, 101);
 }
 
-tr *:last-child {
+.calendar tr *:last-child {
     color: #0c81ff;
 }
 
-td:hover {
+.calendar td:hover {
     background-color: #ffbf6b;
     color: #fff;
     border-radius: 50%;
 }
 
-
-table {
-    /* border-collapse: separate; */
-    border-spacing: 5px;
-    margin: 0 auto;
-}
-
-th,
+.calendar th,
 tr {
     text-align: center;
 }
 
-th {
+.calendar th {
     font-size: 1.3rem;
     padding: 20px;
     border-radius: 5px;
@@ -103,25 +93,22 @@ th {
 }
 
 /* 本日以前のグレーアウト */
-td.gray {
+.calendar td.gray {
     color: #b2b2b2;
     pointer-events: none;
 }
 
 /* 空欄部分の消去 */
-td:empty {
+.calendar td:empty {
     background: none;
     pointer-events: none;
 }
 
-.btn,
-a.btn,
-button.btn {
+.calendar .btn,
+a.btn{
     font-size: 1.3rem;
     font-weight: 700;
     line-height: 1.5;
-    /* position: relative; */
-    /* display: block; */
     cursor: pointer;
     text-align: center;
     vertical-align: middle;
@@ -173,7 +160,6 @@ a.btn--circle:hover i {
     width: 50%;
     display: flex;
     flex-direction: column;
-    /* align-items: center; */
 }
 
 .select_container p {
@@ -184,3 +170,7 @@ a.btn--circle:hover i {
     text-align: center;
 }
 
+
+.selector_btn:active {
+    background-color: red;
+}
