html adjusted.ラジオボタンの選択をセッションに保存したい

--- a/ShiftCreat/style.css
+++ b/ShiftCreat/style.css
@@ -18,6 +18,10 @@ footer {
   background-color: #0c81ff78;
 }
 
+/* .hidden {
+  display: none;
+} */
+
 /* Calendar
 ----------------------------------------- */
 .calendar_container {
