--- a/lp-portfolio/src/app/globals.css
+++ b/lp-portfolio/src/app/globals.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .display_size {
+    @apply max-w-5xl m-auto;
+  }
+}
+
+body {
+  width: 100%;
+  color: #333;
+}
